# loadcell_endpoint

./: .gitignore  Cargo.toml
embed/: Cargo.toml  README.md
embed/src/: main.rs
pcb/board/: board.kicad_pcb  board.kicad_pro  board.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb/libs/: README.md  custom.bak  custom.kicad_sym
pcb/libs/custom.pretty/: hx711_module.kicad_mod
pkgcore/: Cargo.toml
pkgcore/src/: lib.rs
src/: main.rs
